# gitview

./: .gitignore  AGENTS.md  ANALYZER_DESIGN.md  CLAUDE.md  CLI_INTEGRATION.md  FILE_HISTORY_PROPOSAL.md  GRAPHQL_INVESTIGATION.md  JSON_TRACKER_PROPOSAL.md  OPTIMIZATION_PROPOSAL.md  PUBLISHING.md  README.md  SOLUTION_SUMMARY.md  TESTING.md  compare_strategies.py  demo_file.py  pyproject.toml  requirements.txt  setup.py  test_inject.py  verify_installation.py
.github/workflows/: test.yml
ado-sql/: Makefile  README.md
ado-sql/source/: adolib.h  buffer_conv.h  sql_wrapper.h
database/legacy-data/: orders.def  products.def  users.def
docs/: COMMIT_STRATEGY.md  CONFIG_PRESETS.md  HIERARCHICAL_STRATEGY.md  README_SUMMARY.md  STORYLINE_IMPLEMENTATION_PLAN.md  file_history_examples.md  hosted_service_prototype.md  json_tracker_architecture.md
docs/agents/: adaptive-review-agent.md
examples/: PROJECT_GOALS.md  basic_usage.py  critical_mode_example.sh  hierarchical_example.py
gitview/: __init__.py  analyzer.py  branch_comparator.py  cache.py  chunker.py  cli.py  extractor.py  file_ai_summarizer.py  file_tracker.py  github_enricher.py  github_graphql.py  github_worklog.py  hierarchical_storyteller.py  hierarchical_summarizer.py  history_injector.py  pipeline.py  remote.py  significance_analyzer.py  storyteller.py  summarizer.py  writer.py
gitview/adaptive/: __init__.py  agent.py  (+3 more)
output/: history_story.md
scripts/: build.sh  publish-test.sh  publish.sh
tests/: __init__.py  test_adaptive_agent.py  test_github_enricher.py  test_github_graphql.py  test_storyline.py
(+36 files in other folders)
