[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitview"
version = "0.1.0"
description = "Git history analyzer with LLM-powered narrative generation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "gitpython>=3.1.40",
    "python-dateutil>=2.8.2",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
]

[project.scripts]
gitview = "gitview.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitview*"]
